--- a/assets/css/pessoas/pessoas.css
+++ b/assets/css/pessoas/pessoas.css
@@ -4,10 +4,10 @@
 }
 
 .pessoa__nome {
-  margin: 1rem 0;
-  font-family: Pacifico, cursive;
   color: #8d0606;
+  font-family: Pacifico, cursive;
   font-size: 2rem;
+  margin: 1rem 0;
 }
 
 .pessoa__funcao {
@@ -41,4 +41,24 @@
 
 .pessoa__imagem--andreia {
   background-image: url(../../img/pessoas/andreia.jpg);
+}
+
+@media screen and (min-width: 0){
+  .pessoas {
+    flex-direction: column;
+  }
+
+  .pessoa {
+    margin-bottom: 2rem;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .pessoas {
+    flex-direction: row;
+  }
+
+  .pessoa {
+    margin-bottom: 0;
+  }
 }
