--- a/assets/css/receitas/receitas.css
+++ b/assets/css/receitas/receitas.css
@@ -2,7 +2,6 @@
   background: #e5e5e5;
   display: flex;
   flex-wrap: wrap;
-  padding: 5rem 0 0 5rem;
 }
 
 .receita {
@@ -10,8 +9,6 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 5rem;
-  margin-right: 5rem;
-  width: calc(25% - 5rem);
 }
 
 .receita__imagem {
@@ -44,4 +41,37 @@
 .receita__botao:hover {
   background: #620404;
   cursor: pointer;
+}
+
+@media screen and (min-width: 0){
+  .receita {
+    margin-right: 1rem;
+    width: 100%;
+  }
+
+  .receitas {
+    padding: 5rem 0 0 1rem;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .receita {
+    margin-right: 2.5rem;
+    width: calc(33,33% - 2.5rem);
+  }
+
+  .receitas{
+    padding: 5rem 0 0 2.5rem;
+  }
+}
+
+@media screen and (min-width: 992px){
+  .receita {
+    margin-right: 5rem;
+    width: calc(25% - 5rem);
+  }
+
+  .receitas{
+    padding: 5rem 0 0 5rem;
+  }
 }
